--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^18.0.0",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "ngx-toastr": "^19.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "rxjs": "~7.8.0",
