--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^19.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.12.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
